implement main logic

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,9 @@
 {
+    'parser': 'babel-eslint',
     'extends': 'airbnb',
 
     'rules': {
-        'indent': [2, 4, {
+        'indent': [2, 2, {
             SwitchCase: 1,
         }],
         'prefer-const': 0,
@@ -12,8 +13,8 @@
             allowAfterSuper: true,
         }],
         'react/jsx-filename-extension': 0,
-        'react/jsx-indent': [2, 4],
-        'react/jsx-indent-props': [2, 4],
+        'react/jsx-indent': [2, 2],
+        'react/jsx-indent-props': [2, 2],
         'class-methods-use-this': "off",
         // concerned
         'react/forbid-prop-types': "off",
@@ -24,5 +25,6 @@
 
     'globals': {
         'document': false,
+        'window': false,
     },
 }
