--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,11 @@
     ],
     "plugins": [
         "add-module-exports"
-    ]
+    ],
+
+    "env": {
+      "production": {
+        "plugins": ["transform-react-remove-prop-types"]
+      }
+    }
 }
