--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build": "npm run clean && npm update && npm run lint && npm run build:lib && npm run build:umd && npm run build:umd:min",
     "example": "webpack-dev-server --content-base example/ --config example/webpack.config.js",
     "lint": "eslint src",
+    "analyze": "cross-env NODE_ENV=production webpack --bail --env.analyze",
     "test": "echo \"Test: TBD\"",
     "postversion": "git push && git push --tags"
   },
@@ -38,28 +39,29 @@
   "homepage": "https://github.com/goldenyz/thin-react-router#readme",
   "dependencies": {
     "path-to-regexp": "^2.0.0",
-    "prop-types": "^15.6.0",
-    "react": "^15.6.2",
-    "react-dom": "^15.6.2"
+    "react": ">=0.14.0",
+    "react-dom": ">=0.14.0",
+    "prop-types": "*"
   },
   "devDependencies": {
-    "autoprefixer": "^6.6.1",
     "babel-cli": "*",
     "babel-core": "*",
     "babel-eslint": "*",
     "babel-loader": "*",
     "babel-plugin-add-module-exports": "*",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.8",
     "babel-preset-es2015": "*",
     "babel-preset-react": "*",
     "babel-preset-stage-2": "*",
     "cross-env": "*",
-    "eslint": "^3.19.0",
+    "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-plugin-import": "*",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-react": "*",
     "rimraf": "*",
     "webpack": "*",
+    "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "*"
   }
 }
