fix bugs; add basic example

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,12 +15,15 @@
         'react/jsx-filename-extension': 0,
         'react/jsx-indent': [2, 2],
         'react/jsx-indent-props': [2, 2],
-        'class-methods-use-this': "off",
+        'class-methods-use-this': 'off',
         // concerned
-        'react/forbid-prop-types': "off",
-        'react/no-unused-prop-types': "off",
-        'no-plusplus': "off",
-        'no-bitwise': "off",
+        'react/forbid-prop-types': 'off',
+        'react/no-unused-prop-types': 'off',
+        'no-plusplus': 'off',
+        'no-bitwise': 'off',
+        'jsx-a11y/anchor-is-valid': [ 'error', {
+          'components': [ '' ],
+        }]
     },
 
     'globals': {
