--- a/package.json
+++ b/package.json
@@ -57,9 +57,15 @@
     "eslint": "*",
     "eslint-config-airbnb": "*",
     "eslint-plugin-import": "*",
-    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-jsx-a11y": "*",
     "eslint-plugin-react": "*",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "html-webpack-plugin": "^2.30.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
+    "postcss-loader": "^2.0.7",
     "rimraf": "*",
+    "style-loader": "^0.19.0",
     "webpack": "*",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "*"
